# competitive-programming

./: .gitignore  README.md
aoj/: aoj.sln
aoj/ac/: ac.vcxproj  ac.vcxproj.filters
aoj/aoj/: 0116.cpp  0121.cpp  0518.cpp  0523.cpp  0527.cpp  0539.cpp  0540.cpp  0545.cpp  0546.cpp  0558.cpp  0566.cpp  0589.cpp  0594.cpp  1.cpp  1030.cpp  1131.cpp  1140.cpp  1144.cpp  1150.cpp  1156.cpp  1161.cpp  1174.cpp  1182_2.cpp  1195.cpp  1508.cpp  2002.cpp  2005.cpp  2011.cpp  2153.cpp  2170.cpp  2402.cpp  2662.cpp  2665.cpp  2709.cpp  2805.cpp  2806.cpp  2809.cpp  2812.cpp  2813.cpp  3.cpp  (+53 more)
atcoder/: atcoder.sln
atcoder/ac/: ac.vcxproj  ac.vcxproj.filters
atcoder/atcoder/: abc003_4.cpp  abc006_1.cpp  abc006_2.cpp  abc006_3.cpp  abc008_3.cpp  abc008_4.cpp  abc009_3.cpp  abc009_3_2.cpp  abc009_4.cpp  abc011_3.cpp  abc011_4.cpp  abc012_3.cpp  abc012_4.cpp  abc013_3.cpp  abc014_3.cpp  abc014_4.cpp  abc015_3.cpp  abc016_4.cpp  abc017_3.cpp  abc017_4.cpp  abc018_3.cpp  abc020_c.cpp  abc020_d.cpp  abc021_d.cpp  abc022_c.cpp  abc022_d.cpp  abc023_c.cpp  abc023_d.cpp  abc024_c.cpp  abc025_c.cpp  abc025_d.cpp  abc027_d.cpp  abc028_c.cpp  abc028_d.cpp  abc029_c.cpp  abc029_d.cpp  abc030_c.cpp  abc031_c.cpp  abc031_d.cpp  abc032_d.cpp  (+127 more)
cpp/aoj/aoj/: 0514.cpp  0524.cpp  0525.cpp  0535.cpp  0540.cpp  0556.cpp  0567.cpp  0572.cpp  0582.cpp  1150.cpp  1156.cpp  1162.cpp  1181.cpp  1182.cpp  2011.cpp  2021.cpp  2104.cpp  2151.cpp  2152.cpp  2311.cpp  2663.cpp  2741.cpp  2807.cpp  2808.cpp  2815.cpp  ALDS1_13_B.cpp  ALDS1_1_A.cpp  ALDS1_3_D.cpp  ALDS1_6_C.cpp  ALDS1_8_A.cpp  ALDS1_8_C.cpp  DPL_1_A.cpp  DPL_1_B.cpp  DPL_1_C.cpp  DPL_1_E.cpp  DPL_1_F.cpp  DPL_1_G.cpp  DPL_2_A.cpp  DPL_2_B.cpp  DPL_3_A.cpp  (+23 more)
cpp/atcoder/ac/: ac.vcxproj.filters
cpp/atcoder/atcoder/: abc006_1.cpp  abc006_4.cpp  abc008_4.cpp  abc009_3.cpp  abc010_3.cpp  abc010_4.cpp  abc013_4.cpp  abc015_4.cpp  abc018_3.cpp  abc018_4.cpp  abc020_c.cpp  abc020_d.cpp  abc021_c.cpp  abc021_d.cpp  abc023_c.cpp  abc024_d.cpp  abc025_d.cpp  abc026_c.cpp  abc026_d.cpp  abc027_c.cpp  abc027_d.cpp  abc029_d.cpp  abc030_d.cpp  abc032_c.cpp  abc035_d.cpp  abc054_a.cpp  abc054_c_2.cpp  abc054_d.cpp  abc056_a.cpp  abc056_b.cpp  abc057_b.cpp  abc061_c.cpp  abc061_d.cpp  abc064_a.cpp  abc064_b.cpp  agc011_a.cpp  agc011_c.cpp  agc012_b.cpp  agc013_a.cpp  agc014_a.cpp  (+86 more)
cpp/hackerrank/ac/: ac.vcxproj
cpp/hackerrank/hackerrank/: hackerrank.vcxproj.filters  hourrank-19_a.cpp  hourrank-19_c.cpp  solve-me-first.cpp
cpp/learning/: learning.sln
cpp/learning/learning/: dot.cpp  learning.vcxproj  learning.vcxproj.filters  source.cpp
cpp/marathon/: marathon.sln
cpp/marathon/marathon/: marathon.vcxproj  rco-contest-2017-final_a.cpp  rco_b_2.cpp  rco_contest_2017_qual_b.cpp  rco_contest_2017_qual_b_2.cpp  rco_contest_2017_qual_b_anta.cpp  rco_contest_2017_qual_b_tsp_greedy.cpp
cpp/others/: others.sln
cpp/others/ac/: ac.vcxproj.filters
cpp/others/others/: ANCESTOR.cpp  CHEFPRAD.cpp  MEXDIV.cpp  PLUSMUL.cpp  gcj2017_qual_a.cpp  gcj2017_qual_c.cpp  r1a_c.cpp  r1b_a.cpp  r1b_c.cpp  r1c_a.cpp  r1c_c.cpp  r2_b.cpp  r2_b_large.cpp
cpp/topcoder/: topcoder.sln
cpp/yukicoder/ac/: ac.vcxproj
cpp/yukicoder/yukicoder/: 274.cpp  430.cpp  470.cpp  509.cpp  yukicoder.vcxproj.filters
hackerrank/: hackerrank.sln
hackerrank/ac/: ac.vcxproj.filters
hackerrank/hackerrank/: hackerrank.vcxproj  hourrank-19_b.cpp  simple-array-sum.cpp
learning/learning/: dot.cpp  learning.vcxproj  learning.vcxproj.filters  out.txt  source.cpp
marathon/ac/: ac.vcxproj  ac.vcxproj.filters
marathon/marathon/: in.txt  marathon.vcxproj  marathon.vcxproj.filters  out.txt  rco-contest-2017-final_b.cpp  rco_b_3.cpp  rco_contest_2017_qual_b_2.cpp  rco_contest_2017_qual_b_tsp_nearest_insertion.cpp
others/ac/: ac.vcxproj
others/others/: A-large.in  A-large.txt  A-small-attempt0.in  A-small-attempt0.txt  A-small-attempt1.in  A-small-attempt1.txt  B-large-practice.txt  B-large.in  B-large.txt  B-small-attempt0.in  B-small-attempt0.txt  B-small-attempt1.in  B-small-attempt1_large.txt  C-large.in  C-large.txt  C-small-1-attempt0.in  C-small-1-attempt0.txt  C-small-attempt0.in  C-small-attempt0.out  C-small-attempt0.txt  C-small-attempt1.in  C-small-attempt1.out  C-small-attempt2.in  C-small-attempt2.out  FOURPTS.cpp  MEXDIV.cpp  Source.cpp  gcj2016_a.cpp  gcj2017_qual_b.cpp  in.txt  others.vcxproj  others.vcxproj.filters  out.txt  r1a_a.cpp  r1a_b.cpp  r1a_c.cpp  r1b_b.cpp  r1b_b_large.cpp  r1b_large.cpp  r1c_a.cpp  (+5 more)
rust/: .gitignore  README.md  install_snippets.py  new.sh
rust/atcoder/: .gitignore  compete.toml
rust/atcoder/abc063/: abc063_b.rs
rust/atcoder/abc065/: abc065_a.rs
rust/atcoder/abc066/: abc066_a.rs
rust/atcoder/abc067/: abc067_a.rs  abc067_b.rs
rust/atcoder/abc068/: abc068_a.rs  abc068_b.rs
rust/atcoder/abc069/: abc069_a.rs  abc069_b.rs
rust/atcoder/abc071/: abc071_a.rs  abc071_b.rs
rust/atcoder/abc072/: abc072_a.rs  abc072_b.rs
rust/atcoder/abc076/: abc076_a.rs  abc076_c.rs
rust/atcoder/abc077/: abc077_a.rs
rust/atcoder/abc079/: abc079_a.rs
rust/atcoder/abc080/: abc080_a.rs
rust/atcoder/abc081/: abc081_a.rs
rust/atcoder/abc082/: abc082_a.rs
rust/atcoder/abc083/: abc083_a.rs
rust/atcoder/abc085/: abc085_a.rs  abc085_c.rs
rust/atcoder/abc086/: abc086_a.rs  abc086_b.rs
rust/atcoder/abc159/: Cargo.toml
rust/atcoder/abc169/: Cargo.toml
rust/atcoder/abc170/: Cargo.toml
rust/atcoder/abc196/: Cargo.toml  abc196_a.rs
rust/atcoder/agc045/: Cargo.toml
rust/atcoder/agc046/: Cargo.toml
rust/atcoder/nomura2020/: Cargo.toml
rust/codeforces/: 1_A.rs
rust/snippets/: gcd.rs  tips.rs  tmp.rs
rust/yukicoder/: 1.rs  1003.rs  21.rs  987.rs  993.rs  998.rs
topcoder/ac/: ac.vcxproj
topcoder/topcoder/: ExploringNumbers.cpp  SRM712.cpp  TCO.cpp  TCO_R1B.cpp  topcoder.vcxproj  topcoder.vcxproj.filters
yukicoder/: yukicoder.sln
yukicoder/ac/: ac.vcxproj  ac.vcxproj.filters
yukicoder/yukicoder/: 274.cpp  430.cpp  470.cpp  476.cpp  508.cpp  511.cpp  source.cpp  yukicoder.vcxproj  yukicoder.vcxproj.filters
(+73 files in other folders)
