[package]
name = "abc159"
version = "0.1.0"
authors = ["minami <minaminaoy@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc159-a",problem = "https://atcoder.jp/contests/abc159/<FIXME: screen name of the problem>"}
b = {name = "abc159-b",problem = "https://atcoder.jp/contests/abc159/<FIXME: screen name of the problem>"}
c = {name = "abc159-c",problem = "https://atcoder.jp/contests/abc159/<FIXME: screen name of the problem>"}
d = {name = "abc159-d",problem = "https://atcoder.jp/contests/abc159/<FIXME: screen name of the problem>"}

# dependencies added to new project
[dependencies]
proconio = "*"
algo = { git = "https://github.com/minaminao/algo-rs.git" }

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "abc159-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc159-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc159-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc159-d"
path = "./src/bin/d.rs"
