[package]
name = "agc046"
version = "0.1.0"
authors = ["minami <minaminaoy@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "agc046-a",problem = "https://atcoder.jp/contests/agc046/<FIXME: screen name of the problem>"}
b = {name = "agc046-b",problem = "https://atcoder.jp/contests/agc046/<FIXME: screen name of the problem>"}
c = {name = "agc046-c",problem = "https://atcoder.jp/contests/agc046/<FIXME: screen name of the problem>"}
d = {name = "agc046-d",problem = "https://atcoder.jp/contests/agc046/<FIXME: screen name of the problem>"}
e = {name = "agc046-e",problem = "https://atcoder.jp/contests/agc046/<FIXME: screen name of the problem>"}
f = {name = "agc046-f",problem = "https://atcoder.jp/contests/agc046/<FIXME: screen name of the problem>"}

# dependencies added to new project
[dependencies]
proconio = "*"
algo = { git = "https://github.com/minaminao/algo-rs.git" }

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "agc046-a"
path = "./src/bin/a.rs"

[[bin]]
name = "agc046-b"
path = "./src/bin/b.rs"

[[bin]]
name = "agc046-c"
path = "./src/bin/c.rs"

[[bin]]
name = "agc046-d"
path = "./src/bin/d.rs"

[[bin]]
name = "agc046-e"
path = "./src/bin/e.rs"

[[bin]]
name = "agc046-f"
path = "./src/bin/f.rs"
