[package]
name = "nomura2020"
version = "0.1.0"
authors = ["minami <minaminaoy@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "nomura2020-a",problem = "https://atcoder.jp/contests/nomura2020/<FIXME: screen name of the problem>"}
b = {name = "nomura2020-b",problem = "https://atcoder.jp/contests/nomura2020/<FIXME: screen name of the problem>"}
c = {name = "nomura2020-c",problem = "https://atcoder.jp/contests/nomura2020/<FIXME: screen name of the problem>"}
d = {name = "nomura2020-d",problem = "https://atcoder.jp/contests/nomura2020/<FIXME: screen name of the problem>"}
e = {name = "nomura2020-e",problem = "https://atcoder.jp/contests/nomura2020/<FIXME: screen name of the problem>"}
f = {name = "nomura2020-f",problem = "https://atcoder.jp/contests/nomura2020/<FIXME: screen name of the problem>"}

# dependencies added to new project
[dependencies]
proconio = "*"
algo = { git = "https://github.com/minaminao/algo-rs.git" }

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "nomura2020-a"
path = "./src/bin/a.rs"

[[bin]]
name = "nomura2020-b"
path = "./src/bin/b.rs"

[[bin]]
name = "nomura2020-c"
path = "./src/bin/c.rs"

[[bin]]
name = "nomura2020-d"
path = "./src/bin/d.rs"

[[bin]]
name = "nomura2020-e"
path = "./src/bin/e.rs"

[[bin]]
name = "nomura2020-f"
path = "./src/bin/f.rs"
